{
    "name": "PlayerAction",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "4a9a36e8-effa-4467-90fc-7a06b89d31a8",
            "actions": [
                {
                    "name": "Tap1",
                    "type": "Button",
                    "id": "c05552f2-6046-4a09-ad79-79da564e62db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Tap2",
                    "type": "Button",
                    "id": "2974031e-c537-4ecc-916c-0998b33963fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8d0e86e5-3d7e-4433-8f70-0daa5bf9fd0e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e35af57-83d0-44da-8461-da0304484192",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2bcf761-a7ec-4b3a-9df8-1bd950dfb704",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "054d0904-90e1-4a88-a1cf-a1c248738ca8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}